# blank-slate

./: .clippy.toml  .deny.toml  .gitattributes  .gitignore  .pnp.cjs  .taplo.toml  Cargo.toml  LICENSE  Makefile.toml  README.md  package.json  tailwind.config.js
.cargo/: config.toml
app/: Cargo.toml
app/src/: error_template.rs  lib.rs
client/: Cargo.toml
client/src/: lib.rs
server/: Cargo.toml
server/src/: fileserv.rs  main.rs
style/: output.css
