[package]
name = "client"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
app = { path = "../app", default-features = false }
leptos = { workspace = true }
console_error_panic_hook.workspace = true
wasm-bindgen.workspace = true
log.workspace = true
console_log.workspace = true
cfg-if.workspace = true

[features]
default = ["hydrate"]
hydrate = ["leptos/hydrate", "app/hydrate"]
